k8s/user-service-k8s/user-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-service
  name: user-service-svc
  namespace: us
spec:
  ports:
  - port: 5002
    protocol: TCP
    targetPort: 5002
    nodePort: 30002
  selector:
    app: user-service
  type: NodePort
