k8s/user-service-k8s/user-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  namespace: us
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service-svc
            port:
              number: 5002
